--- a/src/main/resources/com/example/FrontEnd/registerCustomer.fxml
+++ b/src/main/resources/com/example/FrontEnd/registerCustomer.fxml
@@ -126,5 +126,10 @@
             <Font name="Arial" size="12.0" />
          </font>
       </Label>
+      <Label layoutX="694.0" layoutY="360.0" prefHeight="79.0" prefWidth="143.0" text="!Q1qaaaaa">
+         <font>
+            <Font name="Arial" size="13.0" />
+         </font>
+      </Label>
     </children>
 </AnchorPane>
