--- a/src/main/resources/com/example/FrontEnd/registerCustomer.fxml
+++ b/src/main/resources/com/example/FrontEnd/registerCustomer.fxml
@@ -27,7 +27,7 @@
                         <AnchorPane prefHeight="200.0" prefWidth="200.0" />
                     </children>
                 </Pane>
-                <Button alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#switchToStart" prefHeight="55.0" prefWidth="321.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="MAIN MENU" textFill="WHITE">
+                <Button fx:id="mainMenuButton" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#switchToStart" onMouseEntered="#confirmHoverInMainMenu" onMouseExited="#confirmHoverOutMainMenu" prefHeight="55.0" prefWidth="321.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="MAIN MENU" textFill="WHITE">
                     <opaqueInsets>
                         <Insets />
                     </opaqueInsets>
@@ -41,7 +41,7 @@
                         <Glow />
                     </effect>
                 </Button>
-                <Button alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#switchToLoginCustomer" prefHeight="55.0" prefWidth="319.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="LOGIN" textFill="WHITE">
+                <Button fx:id="loginButton" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#switchToLoginCustomer" onMouseEntered="#confirmHoverInLogin" onMouseExited="#confirmHoverOutLogin" prefHeight="55.0" prefWidth="319.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="LOGIN" textFill="WHITE">
                     <opaqueInsets>
                         <Insets />
                     </opaqueInsets>
@@ -80,12 +80,12 @@
          <font>
             <Font name="Arial" size="12.0" />
          </font></PasswordField>
-        <Button fx:id="createAccountButton" layoutX="385.0" layoutY="501.0" mnemonicParsing="false" onAction="#onActionCreateAccount" prefHeight="27.0" prefWidth="232.0" style="-fx-background-color: #474B4D;" text="Create Account" textFill="WHITE">
+        <Button fx:id="createAccountButton" layoutX="385.0" layoutY="501.0" mnemonicParsing="false" onAction="#onActionCreateAccount" onMouseEntered="#confirmHoverInCreAcc" onMouseExited="#confirmHoverOutCreAcc" prefHeight="27.0" prefWidth="232.0" style="-fx-background-color: #474B4D;" text="Create Account" textFill="WHITE">
             <font>
                 <Font name="Arial" size="13.0" />
             </font>
         </Button>
-        <Button fx:id="cancelButton" layoutX="385.0" layoutY="541.0" mnemonicParsing="false" onAction="#switchToStart" prefHeight="27.0" prefWidth="232.0" style="-fx-background-color: #474B4D;" text="Cancel" textFill="WHITE">
+        <Button fx:id="cancelButton" layoutX="385.0" layoutY="541.0" mnemonicParsing="false" onAction="#switchToStart" onMouseEntered="#confirmHoverInCancel" onMouseExited="#confirmHoverOutCancel" prefHeight="27.0" prefWidth="232.0" style="-fx-background-color: #474B4D;" text="Cancel" textFill="WHITE">
             <font>
                 <Font name="Arial" size="13.0" />
             </font>
