--- a/src/main/resources/com/example/FrontEnd/profile.fxml
+++ b/src/main/resources/com/example/FrontEnd/profile.fxml
@@ -188,7 +188,7 @@
                                         <Font name="Arial Bold" size="17.0" />
                                     </font>
                                 </Label>
-                                <Label fx:id="currentUsername" layoutX="188.0" layoutY="59.0" prefHeight="26.0" prefWidth="140.0">
+                                <Label fx:id="currentID" layoutX="188.0" layoutY="59.0" prefHeight="26.0" prefWidth="140.0">
                                     <font>
                                         <Font name="Arial Bold" size="17.0" />
                                     </font>
