--- a/src/main/resources/com/example/FrontEnd/loginCustomer.fxml
+++ b/src/main/resources/com/example/FrontEnd/loginCustomer.fxml
@@ -26,7 +26,7 @@
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" />
                </children>
             </Pane>
-            <Button fx:id="mainMenu" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#switchToStart" onMouseEntered="#confirmHoverInMainM" onMouseExited="#confirmHoverOutMainM" prefHeight="55.0" prefWidth="321.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="MAIN MENU" textFill="WHITE">
+            <Button fx:id="mainMenu" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#switchToStart" onMouseEntered="#confirmHoverInMainM" onMouseExited="#confirmHoverOutMainM" prefHeight="55.0" prefWidth="321.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="Main Menu" textFill="WHITE">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
@@ -40,7 +40,7 @@
                   <Glow />
                </effect>
             </Button>
-            <Button fx:id="createAccount" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#switchToRegisterCustomer" onMouseEntered="#confirmHoverInCreAcc" onMouseExited="#confirmHoverOutCreAcc" prefHeight="55.0" prefWidth="319.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="CREATE ACCOUNT" textFill="WHITE">
+            <Button fx:id="createAccount" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#switchToRegisterCustomer" onMouseEntered="#confirmHoverInCreAcc" onMouseExited="#confirmHoverOutCreAcc" prefHeight="55.0" prefWidth="319.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="Create Account" textFill="WHITE">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
