the manual interface for the customer bare-bones is done by Liam Axelrod

--- a/src/main/resources/com/example/FrontEnd/start.fxml
+++ b/src/main/resources/com/example/FrontEnd/start.fxml
@@ -79,7 +79,7 @@
                   <Glow />
                </effect>
             </Button>
-            <Button fx:id="manual" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#switchToManual" onMouseEntered="#confirmHoverInMan" onMouseExited="#confirmHoverOutMan" prefHeight="55.0" prefWidth="321.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="Manual" textFill="WHITE">
+            <Button fx:id="manual" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#switchToManual" onMouseEntered="#confirmHoverInMan" onMouseExited="#confirmHoverOutMan" prefHeight="55.0" prefWidth="321.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="Manual / About us" textFill="WHITE">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
