--- a/src/main/resources/com/example/FrontEnd/zManualCustomerLogin.fxml
+++ b/src/main/resources/com/example/FrontEnd/zManualCustomerLogin.fxml
@@ -113,20 +113,6 @@
                                         <Glow />
                                     </effect>
                                 </Button>
-                                <Button fx:id="switchintLMButton" alignment="BASELINE_LEFT" layoutY="414.0" mnemonicParsing="false" onAction="#switchToManualLogin" onMouseEntered="#confirmHoverEntry" onMouseExited="#confirmHoverExit" prefHeight="55.0" prefWidth="304.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="Login manual " textFill="WHITE">
-                                    <opaqueInsets>
-                                        <Insets />
-                                    </opaqueInsets>
-                                    <padding>
-                                        <Insets left="50.0" />
-                                    </padding>
-                                    <font>
-                                        <Font name="Arial Bold" size="17.0" />
-                                    </font>
-                                    <effect>
-                                        <Glow />
-                                    </effect>
-                                </Button>
                                 <Label alignment="CENTER" layoutY="-1.0" prefHeight="31.0" prefWidth="304.0" text="Switching to different manuals" textFill="WHITE">
                                     <font>
                                         <Font name="Arial Bold" size="20.0" />
@@ -232,20 +218,6 @@
                                                 <Glow />
                                             </effect>
                                         </Button>
-                                        <Button fx:id="openLMButton" alignment="BASELINE_LEFT" layoutY="413.0" mnemonicParsing="false" onAction="#OpenToManualLogin" onMouseEntered="#confirmHoverEntry" onMouseExited="#confirmHoverExit" prefHeight="55.0" prefWidth="304.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="Login manual " textFill="WHITE">
-                                            <opaqueInsets>
-                                                <Insets />
-                                            </opaqueInsets>
-                                            <padding>
-                                                <Insets left="50.0" />
-                                            </padding>
-                                            <font>
-                                                <Font name="Arial Bold" size="17.0" />
-                                            </font>
-                                            <effect>
-                                                <Glow />
-                                            </effect>
-                                        </Button>
                                         <Label alignment="CENTER" layoutY="-1.0" prefHeight="31.0" prefWidth="304.0" text="Open new manual window" textFill="WHITE">
                                             <font>
                                                 <Font name="Arial Bold" size="20.0" />
@@ -275,7 +247,7 @@
         </VBox>
         <Pane layoutX="336.0" prefHeight="112.0" prefWidth="604.0" style="-fx-background-color: #215E9B; -fx-background-color: #27313A;" AnchorPane.leftAnchor="319.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="0.0">
             <children>
-                <Label layoutX="57.0" layoutY="40.0" prefHeight="32.0" prefWidth="507.0" text="The user manual for your convenience" textAlignment="CENTER" textFill="WHITE">
+                <Label layoutX="57.0" layoutY="40.0" prefHeight="32.0" prefWidth="507.0" text="The user manual for login" textAlignment="CENTER" textFill="WHITE">
                     <font>
                         <Font name="Arial Bold" size="27.0" />
                     </font>
