--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -1,3 +1,11 @@
 .root {
     -fx-background-image: url("white.jpg");
 }
+
+.grad{
+    background-image: linear-gradient(to right, #8299AA, #FFFFFF);
+}
+
+.font{
+    -fx-font-family: Garamond;
+}
