--- a/src/main/resources/com/example/FrontEnd/employeeMenu.fxml
+++ b/src/main/resources/com/example/FrontEnd/employeeMenu.fxml
@@ -208,7 +208,7 @@
                         </Label>
                     </children>
                 </Pane>
-                <TextField fx:id="userName" layoutX="195.0" layoutY="32.0" />
+                <TextField fx:id="userID" layoutX="195.0" layoutY="32.0" />
                 <Label layoutX="31.0" layoutY="33.0" text="EMPLOYEE ID:">
                     <font>
                         <Font name="Arial Bold" size="20.0" />
