--- a/src/main/resources/com/example/FrontEnd/employeeLogin.fxml
+++ b/src/main/resources/com/example/FrontEnd/employeeLogin.fxml
@@ -62,7 +62,7 @@
                 <Font name="Arial Bold" size="13.0" />
             </font>
         </Label>
-        <TextField fx:id="usernameTextField" layoutX="542.0" layoutY="262.0" prefHeight="26.0" prefWidth="173.0" promptText="ID">
+        <TextField fx:id="ID" layoutX="542.0" layoutY="262.0" prefHeight="26.0" prefWidth="173.0" promptText="ID">
             <font>
                 <Font name="Arial" size="12.0" />
             </font></TextField>
@@ -111,6 +111,11 @@
       <Label layoutX="387.0" layoutY="358.0" prefHeight="16.0" prefWidth="144.0" text="Employee security key">
          <font>
             <Font name="Arial Bold" size="13.0" />
+         </font>
+      </Label>
+      <Label fx:id="warningText" layoutX="725.0" layoutY="359.0" textFill="RED">
+         <font>
+            <Font name="Arial" size="12.0" />
          </font>
       </Label>
     </children>
