--- a/src/main/resources/com/example/FrontEnd/registerEmployee.fxml
+++ b/src/main/resources/com/example/FrontEnd/registerEmployee.fxml
@@ -138,5 +138,10 @@
             <Font name="Arial" size="12.0" />
          </font>
       </TextField>
+      <Label fx:id="warningText" layoutX="629.0" layoutY="439.0" textFill="RED">
+         <font>
+            <Font name="Arial" size="12.0" />
+         </font>
+      </Label>
     </children>
 </AnchorPane>
