--- a/src/main/resources/com/example/FrontEnd/userMenu.fxml
+++ b/src/main/resources/com/example/FrontEnd/userMenu.fxml
@@ -126,7 +126,7 @@
             </Button>
          </children>
       </VBox>
-      <Pane layoutX="304.0" prefHeight="116.0" prefWidth="636.0" style="-fx-background-color: #215E9B; -fx-background-color: #27313A;" AnchorPane.bottomAnchor="563.0" AnchorPane.leftAnchor="304.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="0.0">
+      <Pane layoutX="312.0" prefHeight="112.0" prefWidth="628.0" style="-fx-background-color: #215E9B; -fx-background-color: #27313A;" AnchorPane.leftAnchor="312.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label layoutX="144.0" layoutY="40.0" text="Thank you for banking with us" textAlignment="CENTER" textFill="WHITE">
                <font>
